# kalashodha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  users.json
ai_art_coach/: __init__.py
test-env/: pyvenv.cfg
